another program change

--- a/projectprogram.ipynb
+++ b/projectprogram.ipynb
@@ -2,26 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter your name please:  asdf\n",
-      "Enter your age please:  17\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello asdf , congratulations on having lived 17 fulfilling years of life!\n",
-      "Sorry, you can't vote, smoke, or go to a casino just yet. Just a little while more.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = input(\"Enter your name please: \")\n",
     "age = int(input(\"Enter your age please: \"))\n",
@@ -32,16 +15,8 @@
     "    if age > 21 or age == 21:\n",
     "        print(\"You're also legally able to smoke or go to a casino, if you so please. Be responsible.\")\n",
     "if age < 18:\n",
-    "    print(\"Sorry, you can't vote, smoke, or go to a casino just yet. Just a little while more.\")\n",
-    "        \n"
+    "    print(\"Sorry, you can't vote, smoke, or go to a casino just yet. Just a little while more.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
